--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     {
       "name": "Veena Basavaraj",
       "email":"vbasavaraj@linkedin.com"
+    },
+    {
+      "name": "Sarah Clatterbuck",
+      "email": "sclatter@linkedin.com"
     }
   ],
   "scripts": {
