--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://jairodemorais@github.com/linkedin/dustjs.git"
   },
   "keywords": ["templates", "views"],
-  "devDependencies": {
+  "dependencies": {
     "jasmine-node"   :  "1.0.x",
     "cover"          :  "0.2.x"
   },
