--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "url": "https://jairodemorais@github.com/linkedin/dustjs.git"
   },
   "keywords": ["templates", "views"],
-  "devDependencies": {
+  "dependencies": {
     "jasmine-node"   :  "1.0.x",
-    "cover"          :  "0.2.x"
+    "cover"          :  "0.2.x",
+    "uglify-js"      :  "1.3.3"
   },
   "license": "MIT",
   "engine": {
