--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dustjs-linkedin",
   "version": "1.1.1",
   "author": "Aleksander Williams",
-  "description": "Asynchronous templates for the browser and node.js",
+  "description": "Asynchronous templates for the browser and node.js (LinkedIn fork)",
   "contributors": [
     {
       "name": "Jairo de Morais",
