--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "url": "https://github.com/linkedin/dustjs.git"
   },
   "keywords": ["templates", "views"],
-  "dependencies": {
+    "devDependencies": {
     "jasmine-node"   :  "1.0.x",
     "cover"          :  "0.2.x",
     "uglify-js"      :  "1.3.3"
