--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "dustjs-linkedin",
+  "title": "Dust - Asynchronous Templating",
   "version": "2.2.2",
-  "author": "Aleksander Williams",
+  "author": {
+    "name": "Aleksander Williams",
+    "url": "http://akdubya.github.com/dustjs"
+  },
+  "homepage": "http://linkedin.github.io/dustjs/",
   "description": "Asynchronous templates for the browser and node.js ( LinkedIn fork )",
   "contributors": [
     {
@@ -10,7 +15,7 @@
     },
     {
       "name": "Veena Basavaraj",
-      "email":"vbasavaraj@linkedin.com"
+      "email": "vbasavaraj@linkedin.com"
     },
     {
       "name": "Jimmy Chan",
@@ -26,21 +31,28 @@
     }
   ],
   "scripts": {
-    "test" : "node test/jasmine-test/server/specRunner.js", 
+    "test": "node test/jasmine-test/server/specRunner.js",
     "start": "node src/build.js"
   },
-  "bin": { "dustc": "./bin/dustc" },
+  "bin": {
+    "dustc": "./bin/dustc"
+  },
   "main": "./lib/dust",
   "repository": {
     "type": "git",
     "url": "https://github.com/linkedin/dustjs.git"
   },
-  "keywords": ["templates", "views"],
+  "keywords": [
+    "templates",
+    "views"
+  ],
   "devDependencies": {
-    "jasmine-node"    :  "1.9.x",
-    "cover"           :  "0.2.x",
-    "uglify-js"       :  "1.3.3",
-    "pegjs"           :  "0.7.0"
+    "jasmine-node": "1.9.x",
+    "cover": "0.2.x",
+    "uglify-js": "1.3.3",
+    "pegjs": "0.7.0",
+    "grunt": "~0.4.2",
+    "grunt-contrib-connect": "~0.5.0"
   },
   "license": "MIT",
   "engine": {
