--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "uglify-js": "1.3.3",
     "pegjs": "0.7.0",
     "grunt": "~0.4.2",
-    "grunt-contrib-connect": "~0.5.0"
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-template-jasmine-istanbul": "~0.2.5"
   },
   "license": "MIT",
   "engine": {
