--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "pegjs": "0.7.0",
     "grunt": "~0.4.2",
     "grunt-contrib-connect": "~0.5.0",
-    "grunt-template-jasmine-istanbul": "~0.2.5"
+    "grunt-template-jasmine-istanbul": "~0.2.5",
+    "grunt-contrib-clean": "~0.5.0"
   },
   "license": "MIT",
   "engine": {
