--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "grunt": "~0.4.2",
     "grunt-contrib-connect": "~0.5.0",
     "grunt-template-jasmine-istanbul": "~0.2.5",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-release": "~0.6.0"
   },
   "license": "MIT",
   "engine": {
