--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     }
   ],
   "scripts": {
-    "test": "node test/jasmine-test/server/specRunner.js",
-    "start": "node src/build.js"
+    "test": "grunt test"
   },
   "bin": {
     "dustc": "./bin/dustc"
@@ -48,7 +47,6 @@
   ],
   "devDependencies": {
     "jasmine-node": "1.9.x",
-    "cover": "0.2.x",
     "uglify-js": "1.3.3",
     "pegjs": "0.7.0",
     "grunt": "~0.4.2",
