--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "grunt-template-jasmine-istanbul": "~0.2.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-copy": "~0.4.1",
-    "grunt-release": "~0.6.0"
+    "grunt-release": "~0.6.0",
+    "grunt-gh-pages": "~0.9.0",
+    "grunt-contrib-compress": "~0.5.3"
   },
   "license": "MIT",
   "engine": {
