--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "bin": {
     "dustc": "./bin/dustc"
   },
-  "main": "./lib/dust",
+  "main": "dist/dust-full.min.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/linkedin/dustjs.git"
@@ -47,7 +47,6 @@
   ],
   "devDependencies": {
     "jasmine-node": "1.9.x",
-    "uglify-js": "1.3.3",
     "pegjs": "0.7.0",
     "grunt": "~0.4.2",
     "grunt-contrib-connect": "~0.5.0",
