put npm back at lib/dust which does a silly require of server... the build full version does not work as a node module it is only usable on the browser. Give that to bower

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "bin": {
     "dustc": "./bin/dustc"
   },
-  "main": "dist/dust-full.min.js",
+  "main": "lib/dust.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/linkedin/dustjs.git"
