--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ notifications:
     - jdemorais@linkedin.com
     - vbasavaraj@linkedin.com
     - jleppert@linkedin.com
+    - jchan@linkedin.com
+before_install:
+  - npm install -g grunt-cli
