--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "views"
   ],
   "devDependencies": {
-    "jasmine-node": "1.9.x",
     "pegjs": "0.7.0",
     "grunt": "~0.4.2",
     "grunt-contrib-connect": "~0.5.0",
@@ -60,7 +59,8 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-shell": "~0.6.1"
+    "grunt-shell": "~0.6.1",
+    "grunt-contrib-jasmine": "~0.5.2"
   },
   "license": "MIT",
   "engine": {
