--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "bin": {
     "dustc": "./bin/dustc"
   },
-  "main": "lib/dust.js",
+  "main": "lib/server.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/linkedin/dustjs.git"
