--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ node_js:
   - "0.8"
 notifications:
   email:
-    - jdemorais@linkedin.com
-    - vbasavaraj@linkedin.com
-    - jleppert@linkedin.com
-    - jchan@linkedin.com
+    - kodnous@linkedin.com
 before_install:
   - npm install -g grunt-cli
