Add build matrix to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,13 @@ language: node_js
 node_js:
   - "0.10"
   - "0.8"
+matrix:
+  include:
+    - node_js: "0.10"
+      env: TEST="all"
+    - node_js: "0.8"
+      env: TEST="node"
+
 notifications:
   email:
     - jdemorais@linkedin.com
@@ -10,3 +17,6 @@ notifications:
     - jchan@linkedin.com
 before_install:
   - npm install -g grunt-cli
+script:
+  - "[$TEST == 'all']  || grunt test"
+  - "[$TEST == 'node'] || grunt testNode"
