--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,15 @@ language: node_js
 node_js:
   - "0.10"
   - "0.8"
+env:
+  - TEST="all"
+  - TEST="node"
 matrix:
-  include:
+  exclude:
     - node_js: "0.10"
-      env: TEST="all"
-    - node_js: "0.8"
       env: TEST="node"
-
+    - node_js: "0.8"
+      env: TEST="all"
 notifications:
   email:
     - jdemorais@linkedin.com
@@ -18,5 +20,4 @@ notifications:
 before_install:
   - npm install -g grunt-cli
 script:
-  - "[$TEST == 'all']  || grunt test"
-  - "[$TEST == 'node'] || grunt testNode"
+  - "[ $TEST = 'all' ] && grunt test || grunt testNode"
