add temporary fix for ssl problems with npm until travis itself updates its npm version

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ notifications:
     - jleppert@linkedin.com
     - jchan@linkedin.com
 before_install:
+  - npm config set ca=""
   - npm install -g grunt-cli
 script:
   - "[ $TEST = 'all' ] && grunt test || grunt testNode"
