Ensure client bundlers load only client-side code See https://gist.github.com/defunctzombie/4339901 for more details

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dustc": "./bin/dustc"
   },
   "main": "lib/server.js",
+  "browser": "./lib/dust.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/linkedin/dustjs.git"
