travis build fix for minimatch grunt module

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ notifications:
     - jchan@linkedin.com
 before_install:
   - npm config set ca=""
+  - npm update -g npm
   - npm install -g grunt-cli
 script:
   - "[ $TEST = 'all' ] && grunt test || grunt testNode"
