--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ notifications:
     - vbasavaraj@linkedin.com
     - jleppert@linkedin.com
     - jchan@linkedin.com
+    - skinast@linkedin.com
 before_install:
-  - npm update -g npm
+  - npm install -g npm@1.4
+  - npm --version
   - npm install -g grunt-cli
 script:
   - "[ $TEST = 'all' ] && grunt test || grunt testNode"
