add more descriptive keywords to the package.json

--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
   },
   "keywords": [
     "templates",
-    "views"
+    "views",
+    "dust",
+    "dustjs",
+    "dust.js",
+    "linkedin"
   ],
   "devDependencies": {
     "pegjs": "0.8.0",
