--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 relative_permalinks: false
-markdown: redcarpet
+
+markdown: kramdown
+kramdown:
+    input: GFM
+    
+exclude:
+    - node_modules
