--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,24 @@
 language: node_js
 node_js:
+  - "0.12"
   - "0.10"
   - "0.8"
+  - "iojs-v1.4"
 env:
   - TEST="all"
   - TEST="node"
 matrix:
   exclude:
+    - node_js: "iojs-v1.4"
+      env: TEST="node"
+    - node_js: "0.12"
+      env: TEST="node"
     - node_js: "0.10"
       env: TEST="node"
     - node_js: "0.8"
       env: TEST="all"
 notifications:
   email:
-    - jdemorais@linkedin.com
-    - vbasavaraj@linkedin.com
-    - jleppert@linkedin.com
     - jchan@linkedin.com
     - skinast@linkedin.com
 before_install:
