Update bower file and package.json

--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,49 @@
 {
   "name": "dustjs-linkedin",
   "version": "2.6.0",
+  "homepage": "https://github.com/linkedin/dustjs",
+  "authors": [
+    "Veena Basavaraj <vybs@users.noreply.github.com>",
+    "Tom Carchrae",
+    "Jimmy Chan <jchan@linkedin.com>",
+    "Steven Foote <sfoote@linkedin.com>",
+    "Prayrit Prash Jain <prjain@linkedin.com>",
+    "Seth Kinast <skinast@linkedin.com>",
+    "Jairo de Morais <jairodemorais@users.noreply.github.com>",
+    "Kate Odnous <kodnous@linkedin.com>",
+    "Richard Ragan <rragan@ebay.com>",
+    "Aleksander Williams (http://akdubya.github.com/dustjs)"
+  ],
+  "description": "asynchronous Javascript templating for the browser and server",
   "main": "dist/dust-full.min.js",
+  "moduleType": [
+    "amd",
+    "globals",
+    "node"
+  ],
+  "keywords": [
+    "templates",
+    "views",
+    "dust",
+    "dustjs",
+    "dust.js",
+    "linkedin"
+  ],
   "devDependencies": {
     "pegjs": "0.8.0"
   },
+  "license": "MIT",
   "ignore": [
-     "**/.*",
-    "tmp",
-    "docs",
-    "test",
-    "src",
+    "**/.*",
     "benchmark",
+    "bin",
+    "docs",
+    "lib",
     "node_modules",
-    ".grunt",
-    "_SpecRunner.html",
-    ".travis.yml",
+    "src",
+    "test",
+    "tmp",
     "Gruntfile.js",
-    "package.json",
-    "bower.json"
+    "package.json"
   ]
 }
