--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "homepage": "http://linkedin.github.io/dustjs/",
   "description": "Asynchronous templates for the browser and node.js ( LinkedIn fork )",
   "contributors": [
-    "Veena Basavaraj <veena.braj@gmail.com>",
+    "Veena Basavaraj <vybs@users.noreply.github.com>",
     "Tom Carchrae",
     "Jimmy Chan <jchan@linkedin.com>",
     "Steven Foote <sfoote@linkedin.com>",
     "Prayrit Prash Jain <prjain@linkedin.com>",
     "Seth Kinast <skinast@linkedin.com>",
-    "Jairo de Morais <jairodemorais@gmail.com>",
+    "Jairo de Morais <jairodemorais@users.noreply.github.com>",
     "Kate Odnous <kodnous@linkedin.com>",
     "Richard Ragan <rragan@ebay.com>"
   ],
