--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "linkedin"
   ],
   "dependencies": {
-    "cli": "~0.6.5"
+    "cli": "~0.6.5",
+    "watchr": "~2.4.13"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
