--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-gh-pages": "~0.9.0",
-    "grunt-jasmine-node": "~0.2.1",
+    "grunt-jasmine-nodejs": "~1.0.2",
     "grunt-shell": "~0.6.1",
     "grunt-template-jasmine-istanbul": "~0.2.5",
     "pegjs": "0.8.0"
