Move lib/server to index
This is the most common Node convention. It also makes it very clear that the `index.js` file is for Node by moving it away from the `lib` directory.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "bin": {
     "dustc": "./bin/dustc"
   },
-  "main": "lib/server.js",
+  "main": "index.js",
   "browser": "./lib/dust.js",
   "repository": {
     "type": "git",
