--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "linkedin"
   ],
   "dependencies": {
-    "cli": "~0.6.5",
-    "watchr": "~2.4.13"
+    "chokidar": "~1.0.0-rc4",
+    "cli": "~0.6.5"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
