Deep resolution of context Thenables
If you have a Thenable `{foo}` that resolves with `{"bar": "baz"}`, you can now put `{foo.bar}` in a template and get "baz".

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,16 @@ node_js:
   - "0.12"
   - "0.10"
   - "0.8"
-  - "iojs-v1.4"
+  - "iojs"
 env:
   - TEST="all"
   - TEST="node"
 matrix:
   exclude:
-    - node_js: "iojs-v1.4"
-      env: TEST="node"
+    - node_js: "iojs"
+      env: TEST="all"
     - node_js: "0.12"
-      env: TEST="node"
+      env: TEST="all"
     - node_js: "0.10"
       env: TEST="node"
     - node_js: "0.8"
