--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cli": "~0.6.5"
   },
   "devDependencies": {
+    "ayepromise": "~1.1.1",
     "grunt": "~0.4.2",
     "grunt-bump": "0.0.11",
     "grunt-contrib-clean": "~0.5.0",
