Remove benchmark and old docs

--- a/bower.json
+++ b/bower.json
@@ -35,10 +35,9 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "benchmark",
     "bin",
-    "docs",
     "examples",
+    "index.js",
     "lib",
     "node_modules",
     "src",
