--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-gh-pages": "~0.10.0",
+    "grunt-github-changes": "~0.0.6",
     "grunt-jasmine-nodejs": "~1.0.2",
     "grunt-shell": "~1.1.2",
     "grunt-template-jasmine-istanbul": "~0.3.3",
