--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "grunt-jasmine-nodejs": "~1.0.2",
     "grunt-shell": "~1.1.2",
     "grunt-template-jasmine-istanbul": "~0.3.3",
+    "highland": "2.4.0",
     "pegjs": "0.8.0"
   },
   "license": "MIT",
