--- a/.jshintrc
+++ b/.jshintrc
@@ -1,20 +1,64 @@
 {
-  "curly": true,
-  "eqeqeq": true,
-  "immed": true,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "sub": true,
-  "undef": true,
-  "unused": false,
-  "boss": true,
-  "eqnull": true,
-  "browser": true,
-  "globals": {
-    "jQuery": true,
-    "require": true,
-    "module": true,
-    "define": true
-  }
+    "bitwise"       : true,
+    "curly"         : true,
+    "eqeqeq"        : true,
+    "forin"         : false,
+    "immed"         : true,
+    "latedef"       : true,
+    "newcap"        : true,
+    "noarg"         : true,
+    "noempty"       : true,
+    "nonew"         : true,
+    "plusplus"      : false,
+    "regexp"        : true,
+    "undef"         : true,
+    "strict"        : false,
+    "trailing"      : true,
+    "unused"        : true,
+
+    "asi"           : false,
+    "boss"          : false,
+    "debug"         : false,
+    "eqnull"        : true,
+    "esnext"        : false,
+    "evil"          : false,
+    "expr"          : false,
+    "funcscope"     : false,
+    "globalstrict"  : false,
+    "iterator"      : false,
+    "lastsemic"     : false,
+    "laxbreak"      : false,
+    "laxcomma"      : false,
+    "loopfunc"      : false,
+    "multistr"      : false,
+    "onecase"       : false,
+    "proto"         : false,
+    "regexdash"     : false,
+    "scripturl"     : false,
+    "smarttabs"     : false,
+    "shadow"        : false,
+    "sub"           : false,
+    "supernew"      : false,
+    "validthis"     : false,
+
+    "browser"       : true,
+    "couch"         : false,
+    "devel"         : false,
+    "dojo"          : false,
+    "jquery"        : false,
+    "mootools"      : false,
+    "node"          : true,
+    "nonstandard"   : false,
+    "prototypejs"   : false,
+    "rhino"         : false,
+    "wsh"           : false,
+
+    "nomen"         : false,
+    "onevar"        : false,
+    "passfail"      : false,
+    "white"         : false,
+
+    "predef"       : [
+      "define"
+    ]
 }
