--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "linkedin"
   ],
   "dependencies": {
-    "chokidar": "~1.0.0-rc4",
+    "chokidar": "~1.0.0",
     "cli": "~0.6.5"
   },
   "devDependencies": {
