Blow away archetype and compass

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ relative_permalinks: false
 markdown: kramdown
 kramdown:
     input: GFM
-    
+
 exclude:
     - node_modules
+    - bower_components
     - vendor
