Compile subdirectories for CommonJS example

--- a/examples/commonjs/package.json
+++ b/examples/commonjs/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node app.js",
-    "compile": "dustc --cjs **/*.dust --pwd=views",
+    "compile": "dustc --cjs 'views/**/*.dust' --pwd=views",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
