--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "grunt-shell": "~1.1.2",
     "grunt-template-jasmine-istanbul": "~0.3.3",
     "highland": "2.4.0",
+    "jasmine": "~2.2.1",
     "pegjs": "0.8.0"
   },
   "license": "MIT",
