--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "linkedin"
   ],
   "dependencies": {
-    "chokidar": "~1.0.0",
-    "cli": "~0.6.5"
+    "chokidar": "~1.0.1",
+    "cli": "~0.6.6"
   },
   "devDependencies": {
     "ayepromise": "~1.1.1",
     "grunt": "~0.4.2",
     "grunt-bump": "0.3.0",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-connect": "~0.9.0",
