--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "grunt-contrib-jshint": "~0.11.1",
     "grunt-contrib-uglify": "~0.8.0",
     "grunt-contrib-watch": "~0.6.1",
-    "grunt-gh-pages": "~0.10.0",
+    "grunt-execute": "~0.2.2",
     "grunt-github-changes": "~0.0.6",
     "grunt-jasmine-nodejs": "~1.4.0",
+    "grunt-peg": "~1.5.0",
     "grunt-shell": "~1.1.2",
     "grunt-template-jasmine-istanbul": "~0.3.3",
     "highland": "2.4.0",
