--- a/bower.json
+++ b/bower.json
@@ -38,12 +38,12 @@
     "bin",
     "examples",
     "index.js",
+    "index.html",
     "lib",
     "node_modules",
     "src",
     "test",
     "tmp",
-    "index.js",
     "Gruntfile.js",
     "package.json"
   ]
