Pushing a fix for module loading. Added index2.js to load the full js

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "Kate Odnous <kodnous@linkedin.com>",
     "Richard Ragan <rragan@ebay.com>"
   ],
-  "module": "index.js",
+  "module": "index2.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/linkedin/dustjs.git"
