--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,31 @@
 language: node_js
 node_js:
   - "0.12"
-  - "iojs"
+  - "5"
+  - "6"
 matrix:
   include:
     - node_js: "0.10"
-      env: TEST="all"
+      env:
+        - TEST="all"
+        - CXX=g++-4.8
 notifications:
   email:
     - jchan@linkedin.com
     - skinast@linkedin.com
 before_install:
-  - npm install -g npm@2
+  - npm install -g npm@3
 before_script:
   - npm update
 sudo: false
 cache:
   directories:
     - node_modules
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
