--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "linkedin"
   ],
   "dependencies": {
-    "chokidar": "~1.5.1",
+    "chokidar": "^3.5.2",
     "cli": "^1.0.1"
   },
   "devDependencies": {
